BD crash on input title duplication
seems stack corruption
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x00007ffff78f9e8e in vlc_seekpoint_Duplicate (src=0x0) at ../include/vlc_input.h:77
i = 0
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x00007ffff78f9e8e in vlc_input_title_Duplicate (t=0x7fff9400ac00) at ../include/vlc_input.h:146
i = 0
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x00007ffff78fb79a in input_vaControl (p_input=0x7fff9c0009e0, i_query=31, args=args@entry=0x7fffc41bc388) at input/control.c:332
p_title = 0x7fffc41bc490
pi_req_title_offset = 0x7fffc41bc48c
i_current_title = 6
priv = 0x7fff9c0009e0
p_bkmk = <optimized out>
ppp_bkmk = 0x7fffb062a520
i_bkmk = 0
pi_bkmk = 0x7fffb03e3bf0
i_int = 0
pi_int = 0x7ffff795e9a9 <vlc_mutex_unlock+9>
b_bool = <optimized out>
pb_bool = 0x81
f = 6.953306163454886e-310
pf = 0x7fffc41bc548
i_64 = 0
pi_64 = 0x7ffff78fb910 <input_vaControl+6256>
psz = 0x2 <error: Cannot access memory at address 0x2>
val =
{i_int = 6597669218294979840, b_bool = false, f_float = -1.91276195e-06, psz_string = 0x5b8fa132b6005d00 <error: Cannot access memory at address 0x5b8fa132b6005d00>, p_address = 0x5b8fa132b6005d00, p_list = 0x5b8fa132b6005d00, coords = {x = -1241490176, y = 1536---Type <return> to continue, or q <return> ---Type <return> to continue, or q <return> to quit---
139570}}
__func__ = "input_vaControl"
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x00007ffff78fa097 in input_Control (p_input=p_input@entry=0x7fff9c0009e0, i_query=i_query@entry=31) at input/control.c:58
args = {{gp_offset = 32, fp_offset = 48, overflow_arg_area = 0x7fffc41bc460, reg_save_area = 0x7fffc41bc3a0}}
i_result = -1336157360
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x00007fffe44cb4d8 in SeekPoints::update() (this=0x7fffb04861b0) at gui/qt/adapters/seekpoints.cpp:43
p_title = 0x0
p_input_thread = 0x7fff9c0009e0
i_title_id = 6
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x00007fffc72db721 in QMetaObject::activate(QObject*, int, int, void**) () at /lib64/libQt5Core.so.5
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x00007fffe45dbba2 in InputManager::chapterChanged(bool) (this=<optimized out>, _t1=<optimized out>) at gui/qt/input_manager.moc.cpp:583
_a = {0x0, 0x7fffc41bc5fc}
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x00007fffe44bf7a9 in InputManager::UpdateNavigation() (this=this@entry=0x7fffb0118680) at gui/qt/input_manager.cpp:469
b_menu = <optimized out>
val = {i_int = 83, b_bool = 83, f_float = 1.16307773e-43, psz_string = 0x53 <error: Cannot access memory at address 0x53>, p_address = 0x53, p_list = 0x53, coords = {x = 83, y = 0}}
val2 = {i_int = 11, b_bool = 11, f_float = 1.54142831e-44, psz_string = 0xb <error: Cannot access memory at address 0xb>, p_address = 0xb, p_list = 0xb, coords = {x = 11, y = 0}}
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x00007fffe44c0ad8 in InputManager::customEvent(QEvent*) (this=0x7fffb0118680, event=0x7fff940345a0) at gui/qt/input_manager.cpp:262
i_type = <optimized out>
ple = 0x7fff940345a0
__func__ = "customEvent"
__PRETTY_FUNCTION__ = "virtual void InputManager::customEvent(QEvent*)"
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x00007fffc72dc79b in QObject::event(QEvent*) () at /lib64/libQt5Core.so.5
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x00007fffc7af4ecc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x00007fffc7afc671 in QApplication::notify(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x00007fffc72b46fa in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt5Core.so.5
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x00007fffc72b6de0 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /lib64/libQt5Core.so.5
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x00007fffc7302653 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /lib64/libQt5Core.so.5
[#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x00007fffc4438e52 in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
[#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x00007fffc44391d0 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
[#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0x00007fffc443927c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
[#18](https://code.videolan.org/videolan/vlc/-/issues/18) 0x00007fffc73026cf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
[#19](https://code.videolan.org/videolan/vlc/-/issues/19) 0x00007fffc72b368a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
[#20](https://code.videolan.org/videolan/vlc/-/issues/20) 0x00007fffc72bb18c in QCoreApplication::exec() () at /lib64/libQt5Core.so.5
[#21](https://code.videolan.org/videolan/vlc/-/issues/21) 0x00007fffe449fde7 in ThreadPlatform(void*, char*) (obj=0x6e3d80, platform_name=platform_name@entry=0x7fffc41bcdcc "xcb") at gui/qt/qt.cpp:655
p_intf = 0x6e3d80
p_sys = 0x6fa1c0
vlc_name = "vlc"
platform_parm = "-platform"
argv = {0x7fffc41bcc6c "vlc", 0x0, 0x7fffc41bcdcc "xcb", 0x0}
argc = 1
app =
{<QApplication> = {<No data fields>}, static staticMetaObject = {d = {superdata = 0x7fffc7fd0780 <QApplication::staticMetaObject>, stringdata = 0x7fffe4643680, data = 0x7fffe4643600, static_metacall = 0x7fffe45f3780 <QVLCApp::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}}
p_mi = 0x7fffb0110e50
__func__ = "ThreadPlatform"
s_style = {static null = {<No data fields>}, d = 0x7fffb010aae0}
#22 (closed) 0x00007fffe44a0896 in ThreadXCB(void*) (data=) at gui/qt/qt.cpp:371 platform_name = "xcb" #23 (closed) 0x00007ffff6f3c73a in start_thread () at /lib64/libpthread.so.0 #24 (closed) 0x00007ffff6a72e0f in clone () at /lib64/libc.so.6
}}}