input: update title const ref on mainloop title update

refs #18727